smoketest/sample-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o /home/andrew/workspace/cryostat3/smoketest -f /home/andrew/workspace/cryostat3/smoketest/../container-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: sample-app
  name: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sample-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o /home/andrew/workspace/cryostat3/smoketest -f /home/andrew/workspace/cryostat3/smoketest/../container-compose.yml
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.service: sample-app
    spec:
      containers:
        - env:
            - name: HTTP_PORT
              value: "8081"
            - name: JMX_PORT
              value: "9093"
          image: quay.io/andrewazores/vertx-fib-demo:0.9.1
          name: sample-app
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
