smoketest/cryostat-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o /home/andrew/workspace/cryostat3/smoketest -f /home/andrew/workspace/cryostat3/smoketest/../container-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: cryostat
  name: cryostat
spec:
  ports:
    - name: "8181"
      port: 8181
      targetPort: 8181
    - name: "9091"
      port: 9091
      targetPort: 9091
  selector:
    io.kompose.service: cryostat
status:
  loadBalancer: {}
