smoketest/cryostat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -o /home/andrew/workspace/cryostat3/smoketest -f /home/andrew/workspace/cryostat3/smoketest/../container-compose.yml
    kompose.service.expose: cryostat
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: cryostat
  name: cryostat
spec:
  rules:
    - host: cryostat
      http:
        paths:
          - backend:
              service:
                name: cryostat
                port:
                  number: 8181
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
